--- a/_pgbackup/README_1755220169.md
+++ b/_pgbackup/README_1755220169.md
@@ -1,6 +1,9 @@
 # Track Attack Running
 
-Static site powered by [Astro](https://astro.build/).
+- Static website using html, css, javascript, Tailwind CSS.
+- Built using Cursor and Pinegrow.
+- Source code hosted in the following [Github repository](https://github.com/apelosi/track-attack-running/).
+- Website hosted in Netlify.
 
 ## Contact form
 
@@ -9,5 +12,4 @@ This project uses [Netlify Forms](https://docs.netlify.com/forms/setup/) with re
 1. Include a form on the site with `data-netlify="true"` and a `name` of `contact`.
 2. Add `<div data-netlify-recaptcha="true"></div>` inside the form to enable reCAPTCHA v2.
 3. Deploy the site. Forms appear in Netlify after the first successful submission.
-4. In Netlify, enable email notifications: Forms → select "contact" → Notifications → Email → recipient `tony@trackattackrunning.com`.
-
+4. In Netlify, enable email notifications: Forms → select "contact" → Notifications → Email → recipient email.
